add new endpoint with different method (GET, GET ALL, POST DATA)
