# controllers/books.go
@@ -2,170 +2,182 @@ package controllers
 
 import (
 	"books_crud/models"
+	"database/sql"
 	"encoding/json"
-	"errors"
-	"strings"
 
-	beego "github.com/beego/beego/v2/server/web"
+	"github.com/beego/beego/validation"
 )
 
-// BooksController operations for Books
-type BooksController struct {
-	beego.Controller
-}
-
-// URLMapping
-func (c *BooksController) URLMapping() {
-	c.Mapping("Post", c.Post)
-	c.Mapping("GetOne", c.GetOne)
-	c.Mapping("GetAll", c.GetAll)
-	c.Mapping("Put", c.Put)
-	c.Mapping("Delete", c.Delete)
-}
-
-// POST Post
-// @Title Post
-// @Description create Books
-// @Param	body		body 	models.Books	true		"body for Books content"
-// @Success 201 {int} models.Books
-// @Failure 403 body is empty
-// @router / [post]
-func (c *BooksController) Post() {
-	var v models.Books
-	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if _, err := models.AddBooks(&v); err == nil {
-			c.Ctx.Output.SetStatus(201)
-			c.Data["json"] = v
-		} else {
-			c.Data["json"] = err.Error()
-		}
-	} else {
-		c.Data["json"] = err.Error()
+type (
+	BookController struct {
+		MainController
 	}
-	c.ServeJSON()
-}
-
-// GET GetOne
-// @Title Get One
-// @Description get Books by id
-// @Param	id		path 	string	true  "The key for staticblock"
-// @Success 200 {object} models.Books
-// @Failure 403 id is empty
-// @router /:id [get]
-func (c *BooksController) GetOne() {
-	idStr := c.Ctx.Input.Param(":id")
-	// id, _ := idStr
-	// id, _ := strconv.Atoi(idStr)
-	v, err := models.GetBooksById(idStr)
-	if err != nil {
-		c.Data["json"] = err.Error()
-	} else {
-		c.Data["json"] = v
+	// BookRequestCreate struct {
+	// 	Name     string `json:"name"`
+	// 	Email    string `json:"email"`
+	// 	Phone    string `json:"phone"`
+	// 	Password string `json:"password"`
+	// 	OtpToken string `json:"otp_token"`
+	// }
+	// BookRequestUpdate struct {
+	// 	Name string `json:"name"`
+	// }
+	// OutputDeleteResponse struct {
+	// 	Success bool   `json:"success"`
+	// 	Message string `json:"message"`
+	// }
+	BookResponse struct {
+		Success string
+		Message string
+		Data    models.BookData
 	}
-	c.ServeJSON()
-}
+)
 
 // GET GetAll
 // @Title Get All
-// @Description get Books
-// @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2"
-// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2"
-// @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2"
-// @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc"
-// @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
-// @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Books
+// @Description API to get all of list book
+// @Success 200 {object} models.BookData
 // @Failure 403
 // @router / [get]
-func (c *BooksController) GetAll() {
-	var fields []string
-	var sortby []string
-	var order []string
-	var query = make(map[string]string)
-	var limit int64 = 10
-	var offset int64
+func (c *BookController) Get() {
+	defer c.ServeJSON()
+	output := make(map[string]interface{}, 0)
+	output["success"] = false
 
-	// fields: col1,col2,entity.col3
-	if v := c.GetString("fields"); v != "" {
-		fields = strings.Split(v, ",")
-	}
-	// limit: 10 (default is 10)
-	if v, err := c.GetInt64("limit"); err == nil {
-		limit = v
-	}
-	// offset: 0 (default is 0)
-	if v, err := c.GetInt64("offset"); err == nil {
-		offset = v
-	}
-	// sortby: col1,col2
-	if v := c.GetString("sortby"); v != "" {
-		sortby = strings.Split(v, ",")
-	}
-	// order: desc,asc
-	if v := c.GetString("order"); v != "" {
-		order = strings.Split(v, ",")
-	}
-	// query: k:v,k:v
-	if v := c.GetString("query"); v != "" {
-		for _, cond := range strings.Split(v, ",") {
-			kv := strings.SplitN(cond, ":", 2)
-			if len(kv) != 2 {
-				c.Data["json"] = errors.New("Error: invalid query key/value pair")
-				c.ServeJSON()
-				return
-			}
-			k, v := kv[0], kv[1]
-			query[k] = v
-		}
-	}
+	var err error
 
-	l, err := models.GetAllBooks(query, fields, sortby, order, offset, limit)
+	bookModel := new(models.BookModel)
+	params := make(map[string]interface{})
+	// params["merchant_id"] = merchantIdInteger
+	res, err := bookModel.GetAllCollection(params)
+
 	if err != nil {
-		c.Data["json"] = err.Error()
-	} else {
-		c.Data["json"] = l
-	}
-	c.ServeJSON()
-}
-
-// PUT Put
-// @Title Put
-// @Description update the Books
-// @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.Books	true		"body for Books content"
-// @Success 200 {object} models.Books
-// @Failure 403 id is not int
-// @router /:id [put]
-func (c *BooksController) Put() {
-	idStr := c.Ctx.Input.Param(":id")
-	// id, _ := strconv.Atoi(idStr)
-	v := models.Books{Id: idStr}
-	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if err := models.UpdateBooksById(&v); err == nil {
-			c.Data["json"] = "OK"
-		} else {
-			c.Data["json"] = err.Error()
+		if err == sql.ErrNoRows {
+			// ZapLogger.Error("user not found with id " + userId + " " + err.Error())
+			c.Ctx.Output.SetStatus(404)
+			output["error"] = "Data tidak ditemukan"
+			c.Data["json"] = output
+			return
 		}
-	} else {
-		c.Data["json"] = err.Error()
+
+		// ZapLogger.Error("failed get user with id " + userId + " " + err.Error())
+		c.Ctx.Output.SetStatus(500)
+		output["error"] = "Kesalahan server"
+		output["errors"] = err
+		c.Data["json"] = output
+		return
 	}
-	c.ServeJSON()
+
+	c.Ctx.Output.SetStatus(200)
+	output["success"] = true
+	output["result"] = res
+	c.Data["json"] = output
 }
 
-// DELETE Delete
-// @Title Delete
-// @Description delete the Books
-// @Param	id		path 	string	true		"The id you want to delete"
-// @Success 200 {string} delete success!
-// @Failure 403 id is empty
-// @router /:id [delete]
-func (c *BooksController) Delete() {
-	idStr := c.Ctx.Input.Param(":id")
-	// id, _ := strconv.Atoi(idStr)
-	if err := models.DeleteBooks(idStr); err == nil {
-		c.Data["json"] = "OK"
-	} else {
-		c.Data["json"] = err.Error()
+// Get GetOne
+// @Title Get One
+// @Description API to get one data book
+// @Param	id		path 	string	true  "the book isbn"
+// @Success 200 {string} models.BookData
+// @Failure 403 body is empty
+// @router /:bookIsbn [get]
+func (c *BookController) GetOne() {
+	defer c.ServeJSON()
+	output := make(map[string]interface{}, 0)
+	output["success"] = false
+	var err error
+
+	//URI VALIDATE
+	bookId := c.Ctx.Input.Param(":bookIsbn")
+	if bookId == "" {
+		// ZapLogger.Error("merchant id " + strconv.FormatInt(merchantIdInteger, 64) + " is invalid")
+		c.Ctx.Output.SetStatus(400)
+		output["error"] = "book isbn salah"
+		c.Data["json"] = output
+		return
 	}
-	c.ServeJSON()
+
+	bookModel := new(models.BookModel)
+
+	obj, err := bookModel.GetObjectByParams(map[string]interface{}{
+		"isbn": bookId,
+	})
+
+	if err != nil && obj == nil {
+		// ZapLogger.Error("error get data : " + err.Error())
+		c.Ctx.Output.SetStatus(404)
+		output["error"] = "Data tidak ditemukan"
+		c.Data["json"] = output
+		return
+	}
+
+	output["success"] = true
+	output["result"] = obj
+	c.Data["json"] = output
+}
+
+// POST PostData
+// @Title Post
+// @Description create Books
+// @Param	body		body 	models.Books	true		"body for Books content"
+// @Success 201 {int} models.BookData
+// @Failure 403 body is empty
+// @router / [post]
+func (c *BookController) Post() {
+	defer c.ServeJSON()
+	output := make(map[string]interface{})
+	output["success"] = false
+
+	inputData := new(models.BookData)
+	inputBody := c.Ctx.Input.RequestBody
+
+	json.Unmarshal(inputBody, &inputData)
+
+	valid := validation.Validation{}
+	valid.Required(inputData.Id, "ISBN")
+	valid.Required(inputData.BooksTitle, "Title")
+	valid.Required(inputData.BooksSubtitle, "Sub Title")
+	valid.Required(inputData.BooksAuthor, "Author")
+	valid.Required(inputData.BooksDescription, "Description")
+	valid.Required(inputData.BooksPublisher, "Publisher")
+	valid.Required(inputData.BooksPublished, "Published")
+
+	if valid.HasErrors() {
+		for _, err := range valid.Errors {
+			c.Ctx.Output.SetStatus(404)
+			output["error"] = err.Key + "" + err.Message
+			c.Data["json"] = output
+			return
+		}
+	}
+
+	bookModel := new(models.BookModel)
+
+	existing, err := bookModel.GetCountByIsbn(inputData.Id)
+
+	if err != nil {
+		output["error"] = err
+		output["success"] = false
+		c.Data["json"] = output
+		return
+	}
+	if existing > 0 {
+		output["error"] = "ISBN " + inputData.Id + " sudah terdaftar"
+		output["success"] = false
+		c.Data["json"] = output
+		return
+	}
+
+	saved, err := bookModel.CreateObject(inputData)
+	if err != nil {
+		c.Ctx.Output.SetStatus(400)
+		// ZapLogger.Error(err.Error())
+		output["error"] = "Gagal menyimpan data"
+		c.Data["json"] = output
+		return
+	}
+
+	output["object"] = saved
+	output["success"] = true
+	c.Data["json"] = output
 }
